@@ -1,5 +1,6 @@
 mklibs (0.1.27) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Apply patches from Joseph S. Myers. (Closes: #469070)
     - mklibs-readelf: Uninitialized data fix
     - mklibs-readelf: Endian fix
@@ -11,7 +12,11 @@ mklibs (0.1.27) UNRELEASED; urgency=low
       in the application that uses it.
   * Document --root in the man page.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 16:10:34 -0400
+  [ Frans Pop ]
+  * Ignore the fact that symbol __gnu_local_gp is undefined for mips as it is
+    defined by the linker. Thanks to Joseph S. Myers. Closes: #499744.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 27 Dec 2008 05:00:09 +0100
 
 mklibs (0.1.26) unstable; urgency=low
 
